--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             align-items: center;
             height: 200px;
             perspective: 600px;
-            background: #87ceeb;
+            background: linear-gradient(to bottom, #87ceeb 0%, #98fb98 100%);
         }
 
         .cube {
@@ -292,9 +292,40 @@
             position: absolute;
             width: 150px;
             height: 150px;
-            background-color: #4CAF50;
+            background-image: url('kusa.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
             backface-visibility: hidden;
-            border: 2px solid #2E7D32;
+            border: 2px solid #228b22;
+            box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2);
+        }
+
+        /* テクスチャが読み込めない場合のフォールバック */
+        .cube .face::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #4CAF50;
+            background-image: 
+                repeating-linear-gradient(
+                    0deg,
+                    transparent,
+                    transparent 10px,
+                    rgba(255, 255, 255, 0.1) 10px,
+                    rgba(255, 255, 255, 0.1) 11px
+                ),
+                repeating-linear-gradient(
+                    90deg,
+                    transparent,
+                    transparent 10px,
+                    rgba(255, 255, 255, 0.1) 10px,
+                    rgba(255, 255, 255, 0.1) 11px
+                );
+            z-index: -1;
         }
 
         .cube .front {
@@ -323,23 +354,23 @@
 
         @keyframes rotateCube {
             0% {
-                transform: rotateY(0deg);
+                transform: rotateY(0deg) rotateX(0deg);
             }
 
             25% {
-                transform: rotateY(90deg);
+                transform: rotateY(90deg) rotateX(15deg);
             }
 
             50% {
-                transform: rotateY(180deg);
+                transform: rotateY(180deg) rotateX(0deg);
             }
 
             75% {
-                transform: rotateY(270deg);
+                transform: rotateY(270deg) rotateX(-15deg);
             }
 
             100% {
-                transform: rotateY(360deg);
+                transform: rotateY(360deg) rotateX(0deg);
             }
         }
     </style>
