--- a/index.html
+++ b/index.html
@@ -276,33 +276,35 @@
             justify-content: center;
             align-items: center;
             height: 200px;
-            perspective: 600px;
+            perspective: 800px;
             background: linear-gradient(to bottom, #87ceeb 0%, #98fb98 100%);
         }
 
         .cube {
-            width: 150px;
-            height: 150px;
+            width: 120px;
+            height: 120px;
             transform-style: preserve-3d;
-            animation: rotateCube 8s linear infinite;
+            animation: rotateCube 6s linear infinite;
             margin: auto;
         }
 
         .cube .face {
             position: absolute;
-            width: 150px;
-            height: 150px;
-            background-image: url('kusa.png');
-            background-size: cover;
+            width: 120px;
+            height: 120px;
+            background-image: url('./kusa.png');
+            background-size: 120px 120px;
             background-repeat: no-repeat;
             background-position: center;
-            backface-visibility: hidden;
-            border: 2px solid #228b22;
-            box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2);
+            backface-visibility: visible;
+            border: 1px solid #2d5a2d;
+            image-rendering: pixelated;
+            image-rendering: -moz-crisp-edges;
+            image-rendering: crisp-edges;
         }
 
-        /* テクスチャが読み込めない場合のフォールバック */
-        .cube .face::before {
+        /* kusa.pngが読み込めない場合のフォールバック - 緑の単色 */
+        .cube .face::after {
             content: '';
             position: absolute;
             top: 0;
@@ -310,65 +312,37 @@
             right: 0;
             bottom: 0;
             background-color: #4CAF50;
-            background-image: 
-                repeating-linear-gradient(
-                    0deg,
-                    transparent,
-                    transparent 10px,
-                    rgba(255, 255, 255, 0.1) 10px,
-                    rgba(255, 255, 255, 0.1) 11px
-                ),
-                repeating-linear-gradient(
-                    90deg,
-                    transparent,
-                    transparent 10px,
-                    rgba(255, 255, 255, 0.1) 10px,
-                    rgba(255, 255, 255, 0.1) 11px
-                );
             z-index: -1;
         }
 
         .cube .front {
-            transform: rotateY(0deg) translateZ(75px);
+            transform: rotateY(0deg) translateZ(60px);
         }
 
         .cube .back {
-            transform: rotateY(180deg) translateZ(75px);
+            transform: rotateY(180deg) translateZ(60px);
         }
 
         .cube .right {
-            transform: rotateY(90deg) translateZ(75px);
+            transform: rotateY(90deg) translateZ(60px);
         }
 
         .cube .left {
-            transform: rotateY(-90deg) translateZ(75px);
+            transform: rotateY(-90deg) translateZ(60px);
         }
 
         .cube .top {
-            transform: rotateX(90deg) translateZ(75px);
+            transform: rotateX(90deg) translateZ(60px);
         }
 
         .cube .bottom {
-            transform: rotateX(-90deg) translateZ(75px);
+            transform: rotateX(-90deg) translateZ(60px);
         }
 
         @keyframes rotateCube {
             0% {
                 transform: rotateY(0deg) rotateX(0deg);
             }
-
-            25% {
-                transform: rotateY(90deg) rotateX(15deg);
-            }
-
-            50% {
-                transform: rotateY(180deg) rotateX(0deg);
-            }
-
-            75% {
-                transform: rotateY(270deg) rotateX(-15deg);
-            }
-
             100% {
                 transform: rotateY(360deg) rotateX(0deg);
             }
