--- a/index.html
+++ b/index.html
@@ -6,6 +6,44 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Attraction Resort — アトラクション一覧</title>
     <style>
+            <style>
+        /* 英数字向けのドット風フォント（Google Fontsから） */
+        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+        /* 日本語ドット風フォント（美咲ゴシック第2をローカルから読み込み） */
+        @font-face {
+            font-family: 'Misaki';
+            src: url('misaki_gothic_2nd.ttf') format('truetype');
+            font-weight: normal;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            font-family: 'Misaki', 'Press Start 2P', "Hiragino Kaku Gothic ProN", sans-serif;
+            background: #f8f8f8;
+            color: #222;
+        }
+
+        /* 見出しや主要UIにドット風フォントを適用 */
+        header h1,
+        h2,
+        .meta h3,
+        .ticket-button,
+        .purchase-btn,
+        .auth-code {
+            font-family: 'Misaki', 'Press Start 2P', "Hiragino Kaku Gothic ProN", sans-serif;
+            -webkit-font-smoothing: none;
+            -moz-osx-font-smoothing: grayscale;
+            letter-spacing: 0.6px;
+        }
+
+
         * {
             box-sizing: border-box;
         }
@@ -15,6 +53,19 @@
             font-family: "Hiragino Kaku Gothic ProN", sans-serif;
             background: #f8f8f8;
             color: #222;
+        }
+
+        /* 見出しや主要UIにドット風フォントを適用 */
+        header h1,
+        h2,
+        .meta h3,
+        .ticket-button,
+        .purchase-btn,
+        .auth-code {
+            font-family: 'Press Start 2P', "Hiragino Kaku Gothic ProN", sans-serif;
+            -webkit-font-smoothing: none;
+            -moz-osx-font-smoothing: grayscale;
+            letter-spacing: 0.6px;
         }
 
         header {
